# charactertray

./: .gitignore  characters.json  charactertray.pyw  generate_icon.ipynb  pyproject.toml  scratchwork.ipynb
charactertray/: __main__.py  argument_parser.py  run_icon.py  tray_menu.py
